# lib/api-spec/openapi.yaml
@@ -540,13 +540,15 @@ components:
           type: integer
         isAvailable:
           type: boolean
+        isSoldOut:
+          type: boolean
         orderType:
           type: string
           description: "preorder or pickup"
         createdAt:
           type: string
           format: date-time
-      required: [id, name, price, category, stock, isAvailable, orderType, createdAt]
+      required: [id, name, price, category, stock, isAvailable, isSoldOut, orderType, createdAt]
 
     CreateProductBody:
       type: object
@@ -585,6 +587,8 @@ components:
         stock:
           type: integer
         isAvailable:
+          type: boolean
+        isSoldOut:
           type: boolean
         orderType:
           type: string
